#F-233 In Progress Tikhonov regularization algorithm: migrate to sealed classes